# AI-Personal-Assistant

./: .gitignore  =3.0.0  CLAUDE.md  QUICKSTART.md  README.md  config.example.yaml  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  run.py  service.sh  sync_docs.py  test_embedding.py  test_wechat.py  需求.md
.claude/: settings.local.json
.shiftengine/history/: 2026-03-06_15-15-claude-code-cli-session-428b52cdafb843c6.md
docker/: .dockerignore  Dockerfile  Dockerfile.cpu  README.md  docker-compose.yml  docker-deploy.sh
docs/: architecture.drawio  overview.drawio  项目分享-AI自动回复助手.md
docs/plan/: BM25_IMPLEMENTATION_SUMMARY.md  BM25_PERSISTENCE_IMPLEMENTATION.md
docs/plans/: 2026-03-06-ai-auto-reply-design.md  2026-03-06-ai-auto-reply-implementation.md
docs/summary/: agentic_trigger_optimization.md
src/ai_assistant/: main.py  webhook_server.py
src/ai_assistant/adapters/: base.py  feishu.py  feishu_bot.py  feishu_ui.py  wechat_adapter.py
src/ai_assistant/core/: ai_provider.py  chat_history.py  config.py  context_manager.py  feishu_doc_manager.py  hybrid_search.py  models.py  reply_executor.py  simple_mcp_client.py  trace_context.py
src/ai_assistant/providers/: anthropic_provider.py  cherrystudio.py  dify_provider.py  openai_provider.py
tests/unit/: test_cherrystudio.py  test_config.py  test_context_manager.py  test_dify_provider_with_doc.py  test_doc_indexing_error.py  test_embedding.py  test_feishu_adapter.py  test_models.py  test_openai_provider_with_doc.py  test_reply_executor.py  test_wechat.py
(+5 files in other folders)
