[project]
name = "ai-auto-reply"
version = "0.1.0"
description = "AI-powered auto-reply assistant for IM tools"
requires-python = ">=3.10"
dependencies = [
    "pywinauto>=0.6.8",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "flask>=3.0.0",
    "pycryptodome>=3.19.0",
    "pyperclip>=1.8.2",
    "anthropic>=0.25.0",
    "httpx-sse>=0.4.0",
    "chromadb>=0.4.0",
    "onnxruntime>=1.15.0",
    "tokenizers>=0.13.0",
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
